# 3DRoguelike

./: .clang-format  .gitignore  .gitmodules  README.md  benchmarks.md  performance.md
3DRoguelike/: CMakeLists.txt  CMakePresets.json
3DRoguelike/3DRoguelike/: 3DRoguelike.cpp  3DRoguelike.h  CMakeLists.txt
3DRoguelike/3DRoguelike/Game/: Assert.h  Assets.cpp  Assets.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
3DRoguelike/3DRoguelike/Game/Algorithms/: Delaunay.cpp  Delaunay3D.cpp  Delaunay3D.h  MST.cpp  MST.h  Pathfind.cpp  Pathfind.h  PersistentHashSet.h
3DRoguelike/3DRoguelike/Game/Allocators/: FreeListAllocator.h  PoolAllocator.h
3DRoguelike/3DRoguelike/Game/DataStructures/: PatriciaSet.cpp  PatriciaSet.h
3DRoguelike/3DRoguelike/Game/Dungeon/: Dungeon.cpp  Dungeon.h  Room.cpp  Room.h  Tile.cpp  Tile.h  TileRenderer.cpp  TileRenderer.h  WorldGrid.cpp  WorldGrid.h
3DRoguelike/3DRoguelike/Game/Model/: Model.cpp  Model.h  ModelConverter.cpp  ModelConverter.h  OBJModel.cpp  OBJModel.h
3DRoguelike/3DRoguelike/Game/Physics/: CollisionDetection.cpp  CollisionDetection.h  Entity.cpp  Entity.h  PlayerCollision.cpp  PlayerCollision.h
3DRoguelike/3DRoguelike/Game/UI/: RenderText.cpp  RenderText.h
3DRoguelike/3DRoguelike/Game/Utility/: CompareFiles.cpp  CompareFiles.h  GLError.cpp  GLError.h  HAMT.cpp  HAMT.h  LogDuration.h  MeasureSetStatistics.cpp  MeasureSetStatistics.h  MeasureStatistics.cpp  MeasureStatistics.h  PathToResources.h  Random.cpp  Random.h  Vector3D.cpp  Vector3D.h
3DRoguelike/3DRoguelike/Resources/Configuration/: config.yaml
3DRoguelike/3DRoguelike/Resources/Shaders/: cubeShader.fs  cubeShader.vs
3DRoguelike/3DRoguelike/ThirdPartyLibraries/: hash_trie.hpp
